--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "stripe": "^12.18.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
